--- a/semana7/package.json
+++ b/semana7/package.json
@@ -7,12 +7,18 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest --forceExit"
+    "test": "jest --forceExit",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.6.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jest": "^29.6.1",
+    "nodemon": "^3.0.1",
+    "pg": "^8.11.1",
+    "supertest": "^6.3.3"
   }
 }
